<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">

    <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/home" />




    <item
        android:id="@+id/nav_profile"
        android:icon="@drawable/ic_person_black_24dp"
        android:title="@string/profile" />
    <item
        android:id="@+id/navigation_schedule"
        android:icon="@drawable/ic_schedule_black_24dp"
        android:title="@string/title_schedule" />

    <item
        android:id="@+id/navigation_history"
        android:icon="@drawable/ic_history_black_24dp"
        android:title="@string/title_history" />


        <item
            android:id="@+id/navigation_rate"
            android:icon="@drawable/icons8expensiveprice50"
            android:title="@string/rate_per_hour" />


    <item
        android:id="@+id/nav_faqs"
        android:icon="@drawable/ic_question_answer_black_24dp"
        android:title="@string/fqas" />
    <item
        android:id="@+id/nav_logout"
        android:icon="@drawable/ic_exit_to_app_black_24dp"
        android:title="@string/logout" />

    </group>

</menu>